--- a/scenarios/data.meteo.unican.es/files/httpd24.ssl.conf
+++ b/scenarios/data.meteo.unican.es/files/httpd24.ssl.conf
@@ -62,6 +62,6 @@ SSLCryptoDevice builtin
 	# With Location blocks later matches overwrite early matches.
 	# So if the cog location "/" is the last location block, it will match all paths and thus overwrite all other Location blocks.
 	# And all other matching proxy pass directives
-	#ProxyPass / http://localhost:8889/
-	#ProxyPassReverse / http://localhost:8889/
+	ProxyPass / http://localhost:8889/
+	ProxyPassReverse / http://localhost:8889/
 </VirtualHost>
