--- a/scenarios/data.meteo.unican.es/backends.yml
+++ b/scenarios/data.meteo.unican.es/backends.yml
@@ -59,6 +59,18 @@
     - role: udg
       tomcat: "{{ tomcats.tds5 }}"
   tasks:
+    - name: Clone repos
+      run_once: True
+      local_action:
+        module: git
+        repo: "{{ item.repo }}"
+        dest: "{{ item.dest }}"
+        version: "{{ item.version }}"
+        depth: 1
+      with_items:
+        - { "repo": "git@gitlab.com:SCDS/tds-content.git", "version": "tds5", "dest": "tds5-content" }
+        - { "repo": "git@gitlab.com:SCDS/tds-content.git", "version": "master", "dest": "tds-content" }
+
     - name: Create directory for jdk
       file: state=directory path={{ jdk_home }}
     
@@ -68,19 +80,10 @@
         dest: "{{ jdk_home }}"
         extra_opts: --strip-components=1
 
-    - name: Synchronize udg tds-content
+    - name: Synchronize tds-content
       synchronize: src=tds-content/ dest={{ tomcats.udg.home }}/content/thredds
 
-    - name: Clone tds5-content
-      run_once: True
-      local_action:
-        module: git
-        repo: git@gitlab.com:SCDS/tds-content.git
-        dest: tds5-content
-        version: tds5
-        depth: 1
-
-    - name: Synchronize udg tds-content
+    - name: Synchronize tds5-content
       synchronize: src=tds5-content/ dest={{ tomcats.tds5.home }}/content/thredds
 
     - name: Remove TAP application
