--- a/scenarios/jupyterhub/main.yml
+++ b/scenarios/jupyterhub/main.yml
@@ -4,8 +4,8 @@
     root: "{{ ansible_env.HOME }}/jupyterhub"
     jupyterhub_home: "{{ root }}"
     conda:
-      home: "{{ root }}/miniconda2"
-      exe: "{{ root }}/miniconda2/bin/conda"
-      actv: "source {{ root }}/miniconda2/bin/activate jupyterhub"
+      home: "{{ root }}/miniconda"
+      exe: "{{ root }}/miniconda/bin/conda"
+      actv: "source {{ root }}/miniconda/bin/activate jupyterhub"
   roles:
     - role: jupyterhub
