--- a/scenarios/data.meteo.unican.es/caches.yml
+++ b/scenarios/data.meteo.unican.es/caches.yml
@@ -1,11 +1,36 @@
+- name: Discover gateway facts
+  hosts: lb
+  tasks:
+    - setup:
+
 - name: Install TDS catalogs and datasets
   hosts: servers
+  vars:
+    gateway: "{{ hostvars['lb']['ansible_facts']['nodename'] }}"
   vars_files:
     - secrets.yml
   tasks:
+    - name: Clone repos
+      run_once: True
+      local_action:
+        module: git
+        repo: "{{ item.repo }}"
+        dest: "{{ item.dest }}"
+        version: "{{ item.version }}"
+        depth: 1
+      with_items:
+        - { "repo": "git@gitlab.com:SCDS/tds-content.git", "version": "tds5", "dest": "tds5-content" }
+        - { "repo": "git@gitlab.com:SCDS/tds-content.git", "version": "devel", "dest": "tds-content" }
+
+    - name: Synchronize tds-content
+      synchronize: src=tds-content/ dest={{ tomcats.udg.home }}/content/thredds
+
+    - name: Synchronize tds5-content
+      synchronize: src=tds5-content/ dest={{ tomcats.tds5.home }}/content/thredds
+
     - name: Reinit catalogs
       uri:
-        url: https://{{ ansible_host }}:{{ tomcats[item].ssl }}/thredds/admin/debug?Catalogs/reinit
+        url: https://{{ gateway }}/thredds/admin/{{ ansible_hostname }}/debug?Catalogs/reinit
         validate_certs: false
         user: "{{ tds.user }}"
         password: "{{ tds.password }}"
@@ -13,7 +38,7 @@
 
     - name: Clear caches
       uri:
-        url: https://{{ ansible_host }}:{{ tomcats[item].ssl }}/thredds/admin/debug?Caches/clearCaches
+        url: https://{{ gateway }}/thredds/admin/{{ ansible_hostname }}/debug?Caches/clearCaches
         validate_certs: false
         user: "{{ tds.user }}"
         password: "{{ tds.password }}"
