--- a/scenarios/data.meteo.unican.es/files/filebeat/filebeat.yml
+++ b/scenarios/data.meteo.unican.es/files/filebeat/filebeat.yml
@@ -26,7 +26,7 @@ filebeat.inputs:
   # Paths that should be crawled and fetched. Glob based paths.
   paths:
     - /var/log/httpd/country_downloads_log
-    #- c:\programdata\elasticsearch\logs\*
+    - /etc/httpd/logs/country_downloads_log*
 
   # Exclude lines. A list of regular expressions to match. It drops the lines that are
   # matching any regular expression from the list.
