--- a/scenarios/data.meteo.unican.es/stop/tomcats.yml
+++ b/scenarios/data.meteo.unican.es/stop/tomcats.yml
@@ -8,8 +8,8 @@
       environment:
         CATALINA_BASE: "{{ tomcats[item].home }}"
       ignore_errors: True # If catalina.pid is present but process is not running, we don't want an error
-      with_items: "{{ tomcats }}"
+      with_items: [ "udg", "tds5" ]
     
     - name: Remove catalina.pid
       file: path={{ tomcats[item].home }}/logs/catalina.pid state=absent
-      with_items: "{{ tomcats }}"
+      with_items: [ "udg", "tds5" ]
