--- a/scenarios/data.meteo.unican.es/files/httpd.conf
+++ b/scenarios/data.meteo.unican.es/files/httpd.conf
@@ -164,6 +164,9 @@ NameVirtualHost *:80
 		Deny from all
 	</LimitExcept>
 </Location>
+<Location /esg-orp/registration-request.htm>
+    Require all denied
+</Location>
 <Location /admin>
 	Order deny,allow
 	Deny from All
