--- a/scenarios/data.meteo.unican.es/caches.yml
+++ b/scenarios/data.meteo.unican.es/caches.yml
@@ -19,7 +19,7 @@
         version: "{{ item.version }}"
         depth: 1
       with_items:
-        - { "repo": "git@gitlab.com:zequihg50/tds5-content.git", "version": "master", "dest": "tds5-content" }
+        - { "repo": "git@gitlab.com:zequihg50/tds5-content.git", "version": "devel", "dest": "tds5-content" }
         - { "repo": "git@gitlab.com:SCDS/tds-content.git", "version": "lustre", "dest": "tds-content" }
 
     - name: Synchronize tds-content
