--- a/scenarios/data.meteo.unican.es/workers.yml
+++ b/scenarios/data.meteo.unican.es/workers.yml
@@ -29,6 +29,16 @@
         - "{{ udg }}"
       when: 'inventory_file|basename == "spock"'
 
+    - name: Add thredds/admin workers
+      delegate_to: lb
+      blockinfile:
+        path: "{{ modproxy_conf }}"
+        insertafter: "# udg admin"
+        marker: "# udg admin {{ ansible_all_ipv4_addresses[0] }}:{{ udg.ssl }}"
+        block: |
+          ProxyPass "/thredds/admin/{{ ansible_host }}" "https://{{ ansible_all_ipv4_addresses[0] }}:{{ udg.ssl }}/thredds/admin"
+          ProxyPassReverse "/thredds/admin/{{ ansible_host }}" "https://{{ ansible_all_ipv4_addresses[0] }}:{{ udg.ssl }}/thredds/admin"
+
 #    - lineinfile:
 #        path: "{{ modproxy_conf }}"
 #        insertafter: <Proxy "balancer://{{ item }}">
@@ -45,15 +55,6 @@
 #      with_items: [ 'udg', 'tds5' ]
 #      when: 'inventory_file|basename == "spock"'
 #
-#    - name: Add thredds/admin workers
-#      delegate_to: lb
-#      blockinfile:
-#        path: "{{ modproxy_conf }}"
-#        insertafter: "# udg admin"
-#        marker: "# udg admin {{ ansible_all_ipv4_addresses[0] }}:{{ tomcats['udg'].ssl }}"
-#        block: |
-#          ProxyPass "/thredds/admin/{{ ansible_host }}" "https://{{ ansible_all_ipv4_addresses[0] }}:{{ tomcats['udg'].ssl }}/thredds/admin"
-#          ProxyPassReverse "/thredds/admin/{{ ansible_host }}" "https://{{ ansible_all_ipv4_addresses[0] }}:{{ tomcats['udg'].ssl }}/thredds/admin"
 
 #- name: ESGF workers
 #  hosts: servers
