--- a/scenarios/data.meteo.unican.es/backends.yml
+++ b/scenarios/data.meteo.unican.es/backends.yml
@@ -70,6 +70,7 @@
       udg_derby_password: "{{ udg.derby_password }}"
       udg_derby_url: "{{ udg.derby_url }}"
       udg_ajp_address: "{{ udg.ajp_address }}"
+      udg_Xmx: "4096m"
   tasks:
     - name: Create directory for jdk
       file: state=directory path={{ jdk_home }}
@@ -92,6 +93,11 @@
         block: |
           <nj22Config>
             <gribParameterTable edition="1" center="98" subcenter="-1" version="128">{{ root }}/{{ inventory_hostname }}/udg/content/thredds/2.98.128.table</gribParameterTable>
+                <Netcdf4Clibrary>
+                  <libraryPath>/lustre/gmeteo/WORK/zequi/miniconda3/lib</libraryPath>
+                  <libraryName>netcdf</libraryName>
+                  <useForReading>true</useForReading>
+                </Netcdf4Clibrary>
           </nj22Config>
 
     - name: Copy udg-tap applicationContext.xml
