--- a/scenarios/data.meteo.unican.es/certstest/ssl.conf
+++ b/scenarios/data.meteo.unican.es/certstest/ssl.conf
@@ -38,3 +38,5 @@ DNS.1 = lb
 DNS.2 = spock.meteo.unican.es
 DNS.3 = data.meteo.unican.es
 DNS.4 = localhost
+DNS.5 = wn031.sci.unican.es
+DNS.6 = wn032.sci.unican.es
