--- a/scenarios/data.meteo.unican.es/caches.yml
+++ b/scenarios/data.meteo.unican.es/caches.yml
@@ -5,6 +5,8 @@
 
 - name: Install TDS catalogs and datasets
   hosts: servers
+  serial: 1
+  ignore_errors: True
   vars:
     gateway: "{{ hostvars['lb']['ansible_facts']['nodename'] }}"
   vars_files:
