--- a/scenarios/data.meteo.unican.es/files/httpd.ssl.conf
+++ b/scenarios/data.meteo.unican.es/files/httpd.ssl.conf
@@ -56,6 +56,7 @@ NameVirtualHost *:443
 	#Include /etc/httpd/conf.d/esgf-proxy-ssl/*.conf
 
 	Alias /robots.txt /var/www/html/robots.txt
+	Alias /inventory.csv /var/www/html/inventory.csv
 
 	# CoG will go here
 	# With Location blocks later matches overwrite early matches.
