updated httpd to 2.4

--- a/scenarios/data.meteo.unican.es/files/httpd24.conf
+++ b/scenarios/data.meteo.unican.es/files/httpd24.conf
@@ -1,6 +1,6 @@
 ServerName data.meteo.unican.es
 ServerTokens Prod
-ServerRoot "/etc/httpd"
+ServerRoot "/opt/rh/httpd24/root/etc/httpd"
 PidFile run/httpd.pid
 Timeout 1200
 KeepAlive Off
@@ -26,6 +26,7 @@ Listen 80
 LoadModule auth_basic_module modules/mod_auth_basic.so
 LoadModule auth_digest_module modules/mod_auth_digest.so
 LoadModule authn_file_module modules/mod_authn_file.so
+LoadModule authn_core_module modules/mod_authn_core.so
 LoadModule authn_anon_module modules/mod_authn_anon.so
 LoadModule authn_dbm_module modules/mod_authn_dbm.so
 LoadModule authz_core_module modules/mod_authz_core.so
@@ -50,7 +51,7 @@ LoadModule headers_module modules/mod_headers.so
 LoadModule setenvif_module modules/mod_setenvif.so
 LoadModule mime_module modules/mod_mime.so
 LoadModule dav_module modules/mod_dav.so
-LoadModule systemd_module modules/mod_systemd.so
+#LoadModule systemd_module modules/mod_systemd.so
 LoadModule status_module modules/mod_status.so
 LoadModule autoindex_module modules/mod_autoindex.so
 LoadModule info_module modules/mod_info.so
@@ -183,6 +184,19 @@ TraceEnable Off
     Require all denied
 </Location>
 
+## BEGIN CMCC KPIs
+LoadModule geoip_module modules/mod_geoip.so
+LoadModule geoip_module       /opt/rh/httpd24/root/usr/lib64/httpd/modules/mod_geoip.so
+<IfModule mod_geoip.c>
+  GeoIPEnable On
+  GeoIPDBFile /usr/share/GeoIP/GeoIP.dat
+</IfModule>
+LogFormat "%{GEOIP_COUNTRY_CODE}e %{%s}t %r %>s %B %D \"%{User-Agent}i\"" country_downloads
+SetEnvIf Request_URI "^/thredds/fileServer.*$" data_log
+CustomLog logs/country_downloads_log country_downloads env=data_log
+## END CMCC KPIs
+#RedirectMatch "^/$" "/thredds"
+RedirectMatch ^/$ /thredds
 <VirtualHost *:80>
 
 	Alias /.well-known/acme-challenge/ /var/www/html/.well-known/acme-challenge/
