--- a/scenarios/data.meteo.unican.es/files/httpd24.ssl.conf
+++ b/scenarios/data.meteo.unican.es/files/httpd24.ssl.conf
@@ -32,10 +32,10 @@ SSLCryptoDevice builtin
 
 #	ProxyPassMatch  ^/solr(.*)$     http://localhost:8983/solr$1
 #	ProxyPassReverse        /solr   http://localhost:8983/solr
-#	
-#	ProxyPass 	/esg-orp	ajp://localhost:8223/esg-orp
-#	ProxyPassReverse /esg-orp	ajp://localhost:8223/esg-orp
-#
+	
+	ProxyPass 	/esg-orp	ajp://localhost:8223/esg-orp
+	ProxyPassReverse /esg-orp	ajp://localhost:8223/esg-orp
+
 #	ProxyPass /esgf-idp	ajp://localhost:8223/esgf-idp
 #	ProxyPassReverse /esgf-idp	ajp://localhost:8223/esgf-idp
 #
@@ -62,6 +62,6 @@ SSLCryptoDevice builtin
 	# With Location blocks later matches overwrite early matches.
 	# So if the cog location "/" is the last location block, it will match all paths and thus overwrite all other Location blocks.
 	# And all other matching proxy pass directives
-	ProxyPass / http://localhost:8889/
-	ProxyPassReverse / http://localhost:8889/
+	#ProxyPass / http://localhost:8889/
+	#ProxyPassReverse / http://localhost:8889/
 </VirtualHost>
