--- a/scenarios/data.meteo.unican.es/start/gateway.yml
+++ b/scenarios/data.meteo.unican.es/start/gateway.yml
@@ -10,6 +10,9 @@
     - name: Start httpd
       service: name=httpd state=started
 
+    - name: Start tomcat
+      shell: /usr/local/tomcat/bin/startup.sh
+
         #    - name: Start CoG
         #      command: /etc/cog-wsgi-8889/apachectl start
         #      register: result
