--- a/scenarios/data.meteo.unican.es/files/httpd24.ssl.conf
+++ b/scenarios/data.meteo.unican.es/files/httpd24.ssl.conf
@@ -7,61 +7,69 @@ SSLRandomSeed startup file:/dev/urandom  256
 SSLRandomSeed connect builtin
 SSLCryptoDevice builtin
 <VirtualHost *:443>
-	SSLEngine on
-	SSLInsecureRenegotiation off
-	SSLProxyEngine On
+        SSLEngine on
+        SSLInsecureRenegotiation off
+        SSLProxyEngine On
 
-	SSLProtocol             all -SSLv2 -SSLv3  -TLSv1 -TLSv1.1
-	SSLCipherSuite          ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA:AES256-SHA:AES:CAMELLIA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!DH-RSA-AES128-GCM-SHA256:!DH-RSA-AES256-SHA256:!AES256-SHA:!CAMELLIA256-SHA:!AES128-GCM-SHA256:!AES256-GCM-SHA384:!AES128-SHA:!AES256-SHA256:!AES128-SHA256:!CAMELLIA128-SHA
-	SSLHonorCipherOrder     on
+        SSLProtocol             all -SSLv2 -SSLv3  -TLSv1 -TLSv1.1
+        SSLCipherSuite          ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA:AES256-SHA:AES:CAMELLIA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!DH-RSA-AES128-GCM-SHA256:!DH-RSA-AES256-SHA256:!AES256-SHA:!CAMELLIA256-SHA:!AES128-GCM-SHA256:!AES256-GCM-SHA384:!AES128-SHA:!AES256-SHA256:!AES128-SHA256:!CAMELLIA128-SHA
+        SSLHonorCipherOrder     on
 
-	SSLVerifyClient optional
-	SSLVerifyDepth	10
-	SSLCertificateFile /etc/certs/hostcert.pem
-	SSLCACertificateFile /etc/certs/esgf-ca-bundle.crt
-	SSLCertificateKeyFile /etc/certs/hostkey.pem
-	SSLCertificateChainFile /etc/certs/cachain.pem
-	SSLOptions +StdEnvVars +ExportCertData
+        SSLVerifyClient optional
+        SSLVerifyDepth        10
+        SSLCertificateFile /etc/certs/hostcert.pem
+        SSLCACertificateFile /etc/certs/esgf-ca-bundle.crt
+        SSLCertificateKeyFile /etc/certs/hostkey.pem
+        SSLCertificateChainFile /etc/certs/cachain.pem
+        SSLOptions +StdEnvVars +ExportCertData
 
-	# security headers
-	Header always set Strict-Transport-Security "max-age=31557600; includeSubdomains;"
-	Header always set X-Content-Type-Options nosniff
+        # security headers
+        Header always set Strict-Transport-Security "max-age=31557600; includeSubdomains;"
+        Header always set X-Content-Type-Options nosniff
 
-	#add local configuration, if any,  to /etc/httpd/conf/esgf-httpd-locals.conf (without virtualhost directive) and uncomment following line. For http, the file is esgf-httpd-local.conf (locals for https, local for http)
-	#Include /etc/httpd/conf/esgf-httpd-locals.conf
+        RewriteEngine On
+        RewriteCond %{HTTP:Connection} Upgrade [NC]
+        RewriteCond %{HTTP:Upgrade} websocket [NC]
+        RewriteRule /ganymede/(.*) ws://192.168.202.189:8000/ganymede/$1 [P,L]
+        RewriteRule /ganymede/(.*) http://192.168.202.189:8000/ganymede/$1 [P,L]
+        ProxyPass /ganymede http://192.168.202.189:8000/ganymede
+        ProxyPassReverse /ganymede  http://192.168.202.189:8000/ganymede
 
-#	ProxyPassMatch  ^/solr(.*)$     http://localhost:8983/solr$1
-#	ProxyPassReverse        /solr   http://localhost:8983/solr
-	
-	ProxyPass 	/esg-orp	ajp://localhost:8223/esg-orp
-	ProxyPassReverse /esg-orp	ajp://localhost:8223/esg-orp
+        #add local configuration, if any,  to /etc/httpd/conf/esgf-httpd-locals.conf (without virtualhost directive) and uncomment following line. For http, the file is esgf-httpd-local.conf (locals for https, local for http)
+        #Include /etc/httpd/conf/esgf-httpd-locals.conf
 
-#	ProxyPass /esgf-idp	ajp://localhost:8223/esgf-idp
-#	ProxyPassReverse /esgf-idp	ajp://localhost:8223/esgf-idp
+#        ProxyPassMatch  ^/solr(.*)$     http://localhost:8983/solr$1
+#        ProxyPassReverse        /solr   http://localhost:8983/solr
+                
+        ProxyPass         /esg-orp        ajp://localhost:8223/esg-orp
+        ProxyPassReverse /esg-orp        ajp://localhost:8223/esg-orp
+
+#        ProxyPass /esgf-idp        ajp://localhost:8223/esgf-idp
+#        ProxyPassReverse /esgf-idp        ajp://localhost:8223/esgf-idp
 #
-#	ProxyPass /esg-search	ajp://localhost:8223/esg-search
-#	ProxyPassReverse /esg-search	ajp://localhost:8223/esg-search
+#        ProxyPass /esg-search        ajp://localhost:8223/esg-search
+#        ProxyPassReverse /esg-search        ajp://localhost:8223/esg-search
 #
-#	ProxyPass /thredds	ajp://localhost:8223/thredds
-#	ProxyPassReverse /thredds	ajp://localhost:8223/thredds
+#        ProxyPass /thredds        ajp://localhost:8223/thredds
+#        ProxyPassReverse /thredds        ajp://localhost:8223/thredds
 #
-#	ProxyPass /las	ajp://localhost:8223/las
-#	ProxyPassReverse /las	ajp://localhost:8223/las
+#        ProxyPass /las        ajp://localhost:8223/las
+#        ProxyPassReverse /las        ajp://localhost:8223/las
 #
-#	ProxyPass /esgf-stats-api	ajp://localhost:8223/esgf-stats-api
-#	ProxyPassReverse /esgf-stats-api	ajp://localhost:8223/esgf-stats-api
+#        ProxyPass /esgf-stats-api        ajp://localhost:8223/esgf-stats-api
+#        ProxyPassReverse /esgf-stats-api        ajp://localhost:8223/esgf-stats-api
 #
-#	ProxyPass /esgf-slcs   http://localhost:8888/esgf-slcs
-#	ProxyPassReverse /esgf-slcs   http://localhost:8888/esgf-slcs
+#        ProxyPass /esgf-slcs   http://localhost:8888/esgf-slcs
+#        ProxyPassReverse /esgf-slcs   http://localhost:8888/esgf-slcs
 
-	#IncludeOptional /etc/httpd/conf.d/esgf-proxy-ssl/*.conf
+        #IncludeOptional /etc/httpd/conf.d/esgf-proxy-ssl/*.conf
 
-	Alias /robots.txt /var/www/html/robots.txt
+        Alias /robots.txt /var/www/html/robots.txt
 
-	# CoG will go here
-	# With Location blocks later matches overwrite early matches.
-	# So if the cog location "/" is the last location block, it will match all paths and thus overwrite all other Location blocks.
-	# And all other matching proxy pass directives
-	#ProxyPass / http://localhost:8889/
-	#ProxyPassReverse / http://localhost:8889/
+        # CoG will go here
+        # With Location blocks later matches overwrite early matches.
+        # So if the cog location "/" is the last location block, it will match all paths and thus overwrite all other Location blocks.
+        # And all other matching proxy pass directives
+        #ProxyPass / http://localhost:8889/
+        #ProxyPassReverse / http://localhost:8889/
 </VirtualHost>
