--- a/scenarios/data.meteo.unican.es/files/httpd24.ssl.conf
+++ b/scenarios/data.meteo.unican.es/files/httpd24.ssl.conf
@@ -32,8 +32,15 @@ SSLCryptoDevice builtin
         RewriteCond %{HTTP:Upgrade} websocket [NC]
         RewriteRule /ganymede/(.*) ws://192.168.202.189:8000/ganymede/$1 [P,L]
         RewriteRule /ganymede/(.*) http://192.168.202.189:8000/ganymede/$1 [P,L]
-        ProxyPass /ganymede http://192.168.202.189:8000/ganymede
-        ProxyPassReverse /ganymede  http://192.168.202.189:8000/ganymede
+        <Location "/ganymede">
+                Require all granted
+                # preserve Host header to avoid cross-origin problems
+                ProxyPreserveHost on
+                # proxy to JupyterHub
+                ProxyPass http://192.168.202.189:8000/ganymede
+                ProxyPassReverse http://192.168.202.189:8000/ganymede
+                RequestHeader     set "X-Forwarded-Proto" expr=%{REQUEST_SCHEME}
+        </Location>
 
         #add local configuration, if any,  to /etc/httpd/conf/esgf-httpd-locals.conf (without virtualhost directive) and uncomment following line. For http, the file is esgf-httpd-local.conf (locals for https, local for http)
         #Include /etc/httpd/conf/esgf-httpd-locals.conf
