--- a/scenarios/data.meteo.unican.es/files/httpd24.ssl.conf
+++ b/scenarios/data.meteo.unican.es/files/httpd24.ssl.conf
@@ -39,7 +39,8 @@ SSLCryptoDevice builtin
                 # proxy to JupyterHub
                 ProxyPass http://192.168.202.189:8000/ganymede
                 ProxyPassReverse http://192.168.202.189:8000/ganymede
-                RequestHeader     set "X-Forwarded-Proto" expr=%{REQUEST_SCHEME}
+                SetEnvIf X-Forwarded-Proto https HTTPS=on
+                RequestHeader set X-Forwarded-Proto "https" env=HTTPS
         </Location>
 
         #add local configuration, if any,  to /etc/httpd/conf/esgf-httpd-locals.conf (without virtualhost directive) and uncomment following line. For http, the file is esgf-httpd-local.conf (locals for https, local for http)
