--- a/scenarios/data.meteo.unican.es/gateway.yml
+++ b/scenarios/data.meteo.unican.es/gateway.yml
@@ -1,9 +1,8 @@
 - name: Install gateway
-  hosts: lb
+  hosts: gateway
   vars:
     hostcert: /etc/pki/tls/certs/hostcert.pem
     hostkey: /etc/pki/tls/private/hostkey.pem
-    httpd_root: /opt/rh/httpd24/root/etc/httpd
   vars_files:
     - secrets.yml
   roles:
@@ -28,7 +27,7 @@
     #        - https://github.com/ESGF/esgf-ansible/releases/download/4.0.0-alpha1/esgf-ca-bundle.crt
 
     - name: Copy httpd conf
-      copy: src={{ httpd_conf_src }} dest={{ httpd_root }}/conf/httpd.conf
+      template: src={{ httpd_conf_src }} dest={{ httpd_root }}/conf/httpd.conf
 
     - name: Copy httpd ssl conf
       copy: src={{ httpd_sslconf_src }} dest={{ httpd_root }}/conf/httpd.ssl.conf
